--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,18 @@
         <service android:name=".TouchCounterService"
             android:enabled="true"
             android:exported="true"/>
+
+        <service
+            android:label="@string/accessibility_service_name"
+            android:name=".AppDetectorService"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/accessibilityservice"/>
+        </service>
     </application>
 
 </manifest>
